--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pipen
-description: "A new Flutter package project."
+description: "Pipen basic tools for build a greatness app."
 version: 0.0.1
 homepage:
 
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  meta: any
   provider: any
 
   flutter_bloc: ^8.1.4
@@ -19,6 +20,7 @@ dependencies:
   go_router: ^13.2.0
   json_pretty: ^1.0.4
   dio: ^5.4.1
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
