--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dio: ^5.4.1
   flutter_secure_storage: ^9.0.0
   args: ^2.4.2
+  graphql: ^5.1.3
 
 dev_dependencies:
   flutter_test:
