--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
   provider: any
 
   flutter_bloc: ^8.1.4
-  skeletons: ^0.0.3
+  flutter_skeleton_ui: ^0.0.6
   swipe_refresh: ^1.0.2
-  go_router: ^13.2.0
+  go_router: ^14.2.0
   json_pretty: ^1.0.4
   dio: ^5.4.1
   flutter_secure_storage: ^9.0.0
@@ -27,7 +27,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
