--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: pipen
-description: "Pipen basic tools for build imports.run.xml greatness app."
-version: 0.0.1
+version: 0.0.2
 homepage: 'https://library.pipen.dev'
+description: "Essential development tools for great apps."
+repository: 'https://github.com/juanfelipepipen/pipen-library'
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -11,9 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  meta: any
-  provider: any
-
+  meta: ^1.12.0
   flutter_bloc: ^8.1.4
   flutter_skeleton_ui: ^0.0.6
   swipe_refresh: ^1.0.2
@@ -23,45 +22,12 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   args: ^2.4.2
   graphql: ^5.1.3
+  async: ^2.11.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # To add custom fonts to your package, add imports.run.xml fonts section here,
-  # in this "flutter" section. Each entry in this list should have imports.run.xml
-  # "family" key with the font family name, and imports.run.xml "fonts" key with imports.run.xml
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
