--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pipen
-version: 0.0.12
+version: 0.0.14
 homepage: 'https://library.pipen.dev'
 description: "Essential development tools for great apps."
 repository: 'https://github.com/juanfelipepipen/pipen-library'
@@ -24,6 +24,7 @@ dependencies:
   graphql: ^5.1.3
   async: ^2.11.0
   provider: ^6.1.2
+  lottie: ^3.0.0
 
 dev_dependencies:
   flutter_test:
