--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pipen
-version: 0.0.14
+version: 0.0.15
 homepage: 'https://library.pipen.dev'
 description: "Essential development tools for great apps."
 repository: 'https://github.com/juanfelipepipen/pipen-library'
@@ -25,6 +25,7 @@ dependencies:
   async: ^2.11.0
   provider: ^6.1.2
   lottie: ^3.0.0
+  vibration: ^2.0.0
 
 dev_dependencies:
   flutter_test:
