--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  bloc: any
+  intl: any
+
   meta: ^1.12.0
   flutter_bloc: ^8.1.4
   flutter_skeleton_ui: ^0.0.6
