--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   provider: ^6.1.2
   lottie: ^3.0.0
   vibration: ^2.0.0
+  expandable_page_view: ^1.0.17
 
 dev_dependencies:
   flutter_test:
