--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   intl: any
 
   meta: ^1.12.0
-  flutter_bloc: ^8.1.4
+  flutter_bloc: ^9.0.0
   flutter_skeleton_ui: ^0.0.6
   swipe_refresh: ^1.0.2
   go_router: ^14.2.0
@@ -28,8 +28,12 @@ dependencies:
   async: ^2.11.0
   provider: ^6.1.2
   lottie: ^3.0.0
-  vibration: ^2.0.0
+  vibration: ^3.0.0
   expandable_page_view: ^1.0.17
+  mime: ^2.0.0
+  http: ^1.2.2
+  http_parser: ^4.1.2
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
