--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^1.2.2
   http_parser: ^4.1.2
   camera: ^0.11.0+2
+  file_picker: ^8.1.7
 
 dev_dependencies:
   flutter_test:
