--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pipen
-version: 0.0.25
+version: 0.0.26
 homepage: 'https://library.pipen.dev'
 description: "Essential development tools for great apps."
 repository: 'https://github.com/juanfelipepipen/pipen-library'
@@ -33,8 +33,8 @@ dependencies:
   mime: ^2.0.0
   http: ^1.2.2
   http_parser: ^4.1.2
-  camera: ^0.11.0+2
   file_picker: ^8.1.7
+  cross_file: ^0.3.4+2
 
 dev_dependencies:
   flutter_test:
