--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   file_picker: ^8.1.7
   cross_file: ^0.3.4+2
 
+  formux:
+    path: ../formux
+  cloux:
+    path: ../cloux
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
