--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pipen
-version: 0.0.27
+version: 0.0.28
 homepage: 'https://library.pipen.dev'
 description: "Essential development tools for great apps."
 repository: 'https://github.com/juanfelipepipen/pipen-library'
@@ -12,9 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  bloc: any
-  intl: any
-
+  intl: ^0.20.2
+  bloc: ^9.0.0
   meta: ^1.12.0
   flutter_bloc: ^9.0.0
   flutter_skeleton_ui: ^0.0.6
@@ -33,13 +32,9 @@ dependencies:
   mime: ^2.0.0
   http: ^1.2.2
   http_parser: ^4.1.2
-  file_picker: ^8.1.7
+  file_picker: ^9.0.0
   cross_file: ^0.3.4+2
-
-#  formux:
-#    path: ../formux
-#  cloux:
-#    path: ../cloux
+  pipen_bloc: ^0.0.1
 
 dev_dependencies:
   flutter_test:
