--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: pipen
-version: 0.0.28
+version: 0.0.29
 homepage: 'https://library.pipen.dev'
 description: "Essential development tools for great apps."
 repository: 'https://github.com/juanfelipepipen/pipen-library'
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ^3.7.0
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  intl: ^0.20.2
+  intl: any
   bloc: ^9.0.0
   meta: ^1.12.0
   flutter_bloc: ^9.0.0
