--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pipen
-version: 0.0.29
+version: 1.0.0
 homepage: 'https://library.pipen.dev'
 description: "Essential development tools for great apps."
 repository: 'https://github.com/juanfelipepipen/pipen-library'
@@ -13,28 +13,31 @@ dependencies:
     sdk: flutter
 
   intl: any
-  bloc: ^9.0.0
-  meta: ^1.12.0
-  flutter_bloc: ^9.0.0
-  flutter_skeleton_ui: ^0.0.6
-  swipe_refresh: ^1.0.2
-  go_router: ^14.2.0
-  json_pretty: ^1.0.4
   dio: ^5.4.1
-  flutter_secure_storage: ^9.0.0
   args: ^2.4.2
-  graphql: ^5.1.3
-  async: ^2.11.0
-  provider: ^6.1.2
-  lottie: ^3.0.0
-  vibration: ^3.0.0
-  expandable_page_view: ^1.0.17
   mime: ^2.0.0
   http: ^1.2.2
+  bloc: ^9.0.0
+  meta: ^1.12.0
+  async: ^2.11.0
+  graphql: ^5.1.3
+  lottie: ^3.0.0
+  provider: ^6.1.2
+  vibration: ^3.0.0
+  go_router: ^14.2.0
+  json_pretty: ^1.0.4
   http_parser: ^4.1.2
   file_picker: ^9.0.0
   cross_file: ^0.3.4+2
-  pipen_bloc: ^0.0.1
+  flutter_bloc: ^9.0.0
+  swipe_refresh: ^1.0.2
+  flutter_skeleton_ui: ^0.0.6
+  expandable_page_view: ^1.0.17
+  flutter_secure_storage: ^9.0.0
+#  pipen_bloc: ^1.1.0
+
+  pipen_bloc:
+    path: ../../Dev/pipen_bloc
 
 dev_dependencies:
   flutter_test:
