--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
 
   pipen_bloc:
     path: ../../Dev/pipen_bloc
+  dart_pusher_channels: ^1.2.3
 
 dev_dependencies:
   flutter_test:
