--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   lottie: ^3.0.0
   provider: ^6.1.2
   vibration: ^3.0.0
-  go_router: ^14.2.0
+  go_router: ^15.0.0
   json_pretty: ^1.0.4
   http_parser: ^4.1.2
-  file_picker: ^9.0.0
+  file_picker: ^10.1.2
   cross_file: ^0.3.4+2
   flutter_bloc: ^9.0.0
   swipe_refresh: ^1.0.2
@@ -38,6 +38,7 @@ dependencies:
 
   pipen_bloc:
     path: ../../Dev/pipen_bloc
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
