--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   pipen_bloc:
     path: ../../Dev/pipen_bloc
   uuid: ^4.5.1
+  gql: ^1.0.1-alpha+1730759315362
 
 dev_dependencies:
   flutter_test:
