--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pipen
-version: 1.0.0
+version: 1.1.0
 homepage: 'https://library.pipen.dev'
 description: "Essential development tools for great apps."
 repository: 'https://github.com/juanfelipepipen/pipen-library'
@@ -34,10 +34,11 @@ dependencies:
   flutter_skeleton_ui: ^0.0.6
   expandable_page_view: ^1.0.17
   flutter_secure_storage: ^9.0.0
-#  pipen_bloc: ^1.1.0
+  pipen_bloc: ^1.2.0
+#
+#  pipen_bloc:
+#    path: ../../Dev/pipen_bloc
 
-  pipen_bloc:
-    path: ../../Dev/pipen_bloc
   uuid: ^4.5.1
   gql: ^1.0.1-alpha+1730759315362
 
