--- a/pubspec_overrides.yaml
+++ b/pubspec_overrides.yaml
@@ -1,3 +1,3 @@
-#dependency_overrides:
-#  pipen_bloc:
-#    path: ../../Dev/pipen_bloc
+dependency_overrides:
+  pipen_bloc:
+    path: ../../Dev/pipen_bloc
