--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pipen
-version: 2.2.1
+version: 2.2.2
 homepage: 'https://library.pipen.dev'
 description: "Essential development tools for great apps."
 repository: 'https://github.com/juanfelipepipen/pipen-library'
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  intl: any
+  intl: ^0.20.2
   dio: ^5.4.1
   args: ^2.4.2
   mime: ^2.0.0
@@ -34,9 +34,11 @@ dependencies:
   flutter_skeleton_ui: ^0.0.6
   expandable_page_view: ^1.0.17
   flutter_secure_storage: ^9.0.0
-  pipen_bloc: ^1.2.3
   uuid: ^4.5.1
-  gql: ^1.0.1-alpha+1730759315362
+  gql: ^1.0.0+1
+
+  # Pipen libs
+  pipen_bloc: ^1.2.4
 
 dev_dependencies:
   flutter_test:
