--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: pipen
-version: 2.2.3
+version: 2.2.4
 homepage: 'https://library.pipen.dev'
 description: "Essential development tools for great apps."
 repository: 'https://github.com/juanfelipepipen/pipen-library'
 
 environment:
-  sdk: ^3.7.0
-  flutter: ">=1.17.0"
+  sdk: ^3.10.0
+  flutter: ">=3.27.0"
 
 dependencies:
   flutter:
@@ -24,16 +24,16 @@ dependencies:
   lottie: ^3.0.0
   provider: ^6.1.2
   vibration: ^3.0.0
-  go_router: ^16.0.0
+  go_router: ^17.0.1
   json_pretty: ^1.0.4
   http_parser: ^4.1.2
-  file_picker: ^10.1.2
+  file_picker: 10.2.0
   cross_file: ^0.3.4+2
   flutter_bloc: ^9.0.0
   swipe_refresh: ^1.0.2
   flutter_skeleton_ui: ^0.0.6
   expandable_page_view: ^1.0.17
-  flutter_secure_storage: ^9.0.0
+  flutter_secure_storage: ^10.0.0
   uuid: ^4.5.1
   gql: ^1.0.0+1
 
